using SpengerbiteApi.Models.Shared;

namespace SpengerbiteApi.Models.Customer;

public abstract class Customer : EntityBase
{
    // EF Core
    protected Customer() { }
}
