namespace SpengerbiteApi.Models.Shared;

public enum OrderStatus
{
    Submitted, 
    Confirmed, 
    Preparing, 
    Delivered, 
    Cancelled
}
