namespace SpengerbiteApi.Models.Shared;

public enum UserRole
{
    Admin, 
    Customer, 
    RestaurantOwner
}
